skills/openshift-deploy/templates/kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: __APP__-service
    labels:
        app: __APP__
spec:
    ports:
        - name: __PORT__-tcp
          port: __PORT__
          protocol: TCP
          targetPort: __PORT__
    selector:
        app: __APP__
    sessionAffinity: None
    type: ClusterIP
